# openshift-notes

./: Hypershift  LVMS.yaml  LVMS2  NOTES_VIRT  NOTEScurrentdesidred  automateinstall-note  certy  certy-weryfikacja  chckmappvc.sh  chrony.conf  cpu-check.sh  cronjobldap  deubugProblemdeployment  f.y  fixlabel  groupmanagersa  haproxy  infra_nodes.yaml  kube-reserved.yaml  ldap  limitsrequester.sh  logi_routy  loginstoken  machine.yaml  monitor_full.sh  monitoring.sh  monitoring_overcomit.sh  nad.yaml  nad2.yaml  nmi.yaml  nmsbond.yaml  nmstate copy.yaml  nmstate.yaml  nncp2.yaml  nodePOdaffinity.sh  nodepodAfinityV2.sh  nodepool  notes_command  operatorcrdprem.yaml  ovn-nad.yaml  (+18 more)
ALTUALIZACJE/: fix-mcp.sh  fixver2.sh  notes  ocp-ver-diagnose.sh  osimage.sh
ANSIBLE/: group_rbac_setup.yml
Dok/: OCP_Dokumentacja_Operacyjna.md  analiza-dr-klastry-ocp.md
LVMS/: lvmcluster
MIGRACje/: migracja skrypt.yaml  node-over-capacity.py  nodevmovercommit.yml  notes  skrypt_migra.yml
SKRYPTY/ocp-sizer/: README.md  pyproject.toml
SKRYPTY/ocp-sizer/ocp_sizer/: __init__.py  __main__.py  cli.py
SKRYPTY/ocp-sizer/ocp_sizer/analyzer/: aggregator.py  constraint_analyzer.py  sizer.py
SKRYPTY/ocp-sizer/ocp_sizer/collector/: base.py  metrics.py  nodes.py  pods.py  policies.py  prometheus.py  quotas.py  workloads.py
SKRYPTY/ocp-sizer/ocp_sizer/models/: constraints.py  resources.py  sizing.py  workload.py
SKRYPTY/ocp-sizer/ocp_sizer/output/: html.py  terminal.py
SKRYPTY/ocp-sizer/ocp_sizer/templates/: report.html.j2
SKRYPTY/ocp-sizer/ocp_sizer/utils/: k8s_client.py  units.py
(+29 files in other folders)
