[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ocp-sizer"
version = "0.1.0"
description = "Analizator zasobów OpenShift i kalkulator sizingu klastra"
requires-python = ">=3.9"
dependencies = [
    "kubernetes>=28.1.0",
    "rich>=13.7.0",
    "jinja2>=3.1.3",
]

[project.scripts]
ocp-sizer = "ocp_sizer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocp_sizer*"]
